--- a/Final_Lab_Task-2/src/main/webapp/WEB-INF/web.xml
+++ b/Final_Lab_Task-2/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,62 @@
     </param-value>
   </context-param>
 
+
+
+
+
+
+
+<!--  <filter>-->
+<!--    <filter-name>CORS</filter-name>-->
+<!--    <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>-->
+
+<!--    <init-param>-->
+<!--      <param-name>cors.allowGenericHttpRequests</param-name>-->
+<!--      <param-value>true</param-value>-->
+<!--    </init-param>-->
+
+<!--    <init-param>-->
+<!--      <param-name>cors.allowOrigin</param-name>-->
+<!--      <param-value>*</param-value>-->
+<!--    </init-param>-->
+
+<!--    <init-param>-->
+<!--      <param-name>cors.allowSubdomains</param-name>-->
+<!--      <param-value>false</param-value>-->
+<!--    </init-param>-->
+
+<!--    <init-param>-->
+<!--      <param-name>cors.supportedMethods</param-name>-->
+<!--      <param-value>GET, HEAD, POST, DELETE, OPTIONS</param-value>-->
+<!--    </init-param>-->
+
+<!--    <init-param>-->
+<!--      <param-name>cors.supportedHeaders</param-name>-->
+<!--      <param-value>*</param-value>-->
+<!--    </init-param>-->
+
+<!--    <init-param>-->
+<!--      <param-name>cors.supportsCredentials</param-name>-->
+<!--      <param-value>true</param-value>-->
+<!--    </init-param>-->
+
+<!--    <init-param>-->
+<!--      <param-name>cors.maxAge</param-name>-->
+<!--      <param-value>3600</param-value>-->
+<!--    </init-param>-->
+<!--  </filter>-->
+
+
+
+
+
+
+
+
+
+
+
   <filter>
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
